<resources>
    <string name="app_name">PrimeVideoClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="buttonTümü">All</string>
    <string name="buttonFilmler">Movies</string>
    <string name="buttonDizi">Tv Series</string>
    <string name="textPrime">Prime</string>
    <string name="textInfo1">- TV series and movies with voiced > </string>
    <string name="textInfo2">- Amazon Original and Exclusive Content > </string>
    <string name="textInfo3">- TV series and movies with subtitles > </string>

</resources>